[package]
name = "easytier-tui"
version = "0.1.0"
edition = "2021"
authors = ["solider245"]
description = "A terminal UI for EasyTier"

[dependencies]
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
